[tool.poetry]
name = "cards"
version = "0.1.0"
description = "A simple playing card implementation."
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
license = "apache-2.0"

[tool.poetry.scripts]
poker = "cards.scripts:poker_cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
